# parrot

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md
.github/actions/fetch-uv-bin/: action.yml
.github/workflows/: deploy-site.yml  release.yml
docs/: LICENSING.md  README.md  ROADMAP.md  deep-review-findings.md
docs/specs/: architecture.md  design-system.md  device-detection.md  first-run-setup.md  ipc-contract.md  packaging.md  settings.md  synthesis.md  transcription.md  ui-ux.md  voice-cloning.md  voice-profiles.md
frontend/: package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: clone-speak.spec.ts
frontend/src/: app.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: bootstrap.rs  lib.rs  main.rs  native.rs  supervisor.rs
frontend/src/lib/: format.ts
frontend/src/lib/api/: audio.ts  client.test.ts  client.ts  engine.ts  generate.ts  health.ts  history.ts  index.ts  native.ts  profiles.ts  settings.ts  setup.ts  sidecar.ts  transcribe.ts  ttsStream.test.ts  ttsStream.ts  types.ts
frontend/src/lib/components/: AudioPlayer.svelte  DownloadProgress.svelte  LanguageSelect.svelte  ProfileDetail.svelte  Recorder.svelte  SetupGate.svelte  TextComposer.svelte  TranscribeModelPicker.svelte  VoiceCard.svelte  VoicePicker.svelte  WindowTitlebar.svelte
frontend/src/lib/components/screens/: CloneScreen.svelte  SettingsScreen.svelte  SpeakScreen.svelte
frontend/src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  Dialog.svelte  Dropzone.svelte  Field.svelte  ModeTabs.svelte  Pill.svelte  ProgressBar.svelte  Select.svelte  Slider.svelte  Spinner.svelte  TextInput.svelte  Toast.svelte  focusRing.ts
frontend/src/lib/stores/: bootstrap.ts  device.ts  history.ts  profiles.test.ts  profiles.ts  setup.test.ts  setup.ts  synthesis.test.ts  synthesis.ts  toasts.ts  transcribe.test.ts  transcribe.ts  ui.ts  updater.test.ts  updater.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
scripts/: smoke-test.sh
sidecar/: README.md  alembic.ini  main.py  pyproject.toml
sidecar/alembic/: env.py
sidecar/alembic/versions/: 0001_initial_schema.py
sidecar/app/: __init__.py  config.py
sidecar/app/core/: __init__.py  crypto.py  db.py  device.py  logging.py  paths.py  schema.py  sse_broadcast.py
sidecar/app/engine/: __init__.py  omnivoice_backend.py
sidecar/app/routers/: audio.py  deps.py  engine.py  generate.py  health.py  history.py  profiles.py  settings.py  setup.py  transcribe.py  ws.py
sidecar/app/services/: __init__.py  asr_manager.py  audio_dsp.py  audio_io.py  download_orchestrator.py  errors.py  generate.py  generation_progress.py  hf_token.py  history.py  model_manager.py  profiles.py  settings_store.py  setup_manager.py  transcribe.py  tts_backend.py
sidecar/tests/: conftest.py  test_asr_manager.py  test_audio.py  test_audio_dsp.py  test_config_and_logging.py  test_crypto.py  test_db.py  test_device.py  test_download_orchestrator.py  test_generate.py  test_generation_progress.py  test_history.py  test_profiles.py  test_routers.py  test_settings.py  test_setup.py  test_transcribe.py
site/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
site/src/: styles.css
