[project]
name = "parrot-sidecar"
version = "0.0.8"
description = "Parrot local voice engine — FastAPI sidecar (clone + speak)"
requires-python = ">=3.11"

# Runtime deps that are LIGHT enough to always install and that the pure-Python
# app paths (DB, profiles, history, settings, setup-status, DSP scaffolding,
# device-status fallback) import directly. The heavy ML stack lives in the
# optional `engine` extra below and is imported lazily so the app — and the test
# suite — boot without torch present (model loading is mocked in tests; see
# docs/specs/synthesis.md "model loading mocked so engine tests don't need a GPU").
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",   # FastAPI multipart form parsing (/generate, /profiles)
    "numpy>=1.26",               # waveform math (light)
    "soundfile>=0.12",           # WAV I/O; wheel bundles libsndfile
    "huggingface-hub>=0.24",     # model download + whoami/login (light, no torch)
    "cryptography>=42",          # Fernet at-rest encryption of the HF token
    "alembic>=1.13",             # versioned DB migrations (tested upgrade path)
]

# The voice engine. NOT installed by the default `uv sync` / the test venv (it is
# multi-GB and needs no test coverage — the model boundary is mocked). Production /
# first-run installs it with `uv sync --no-dev --extra engine` PLUS exactly one of
# the `cpu`/`cu124` extras below (see docs/specs/packaging.md Rule 4). The
# Apache-2.0 `omnivoice` model lib (https://pypi.org/project/omnivoice/, k2-fsa)
# provides the import the engine adapter uses (`from omnivoice import OmniVoice`)
# and is credited in docs/LICENSING.md. transformers>=5.3 matches what omnivoice
# 0.1.x needs (the model's config.json declares transformers_version 5.3.0).
#
# torch/torchaudio are deliberately NOT here — omnivoice pulls them transitively,
# and WHICH wheel (CPU vs CUDA) is decided by the `cpu`/`cu124` extras so the right
# build lands per machine.
[project.optional-dependencies]
engine = [
    "omnivoice>=0.1.5",
    "transformers>=5.3",
    "pedalboard>=0.9",           # DSP effect presets (graceful-degrades if absent)
]

# CPU vs CUDA torch — selected at first-run by the Rust supervisor from NVIDIA-GPU
# detection (device-detection.md): a GPU machine syncs `--extra engine --extra
# cu124` (GPU inference), every other machine `--extra engine --extra cpu`. The two
# are declared conflicting in [tool.uv] so they can never both be active, and
# torch/torchaudio are pinned to PyTorch's per-variant wheel indexes (NOT PyPI,
# whose default Windows wheel is CPU-only) via [tool.uv.sources] below. cu124 fits
# Ada/Ampere/Turing NVIDIA GPUs with a recent driver; CPU is the safe default.
cpu = [
    "torch>=2.4",
    "torchaudio>=2.4",
]
cu124 = [
    "torch>=2.4",
    "torchaudio>=2.4",
]

# Test/dev tooling — NOT shipped in the bundle (production sync uses `uv sync --no-dev`).
# httpx backs FastAPI's TestClient.
# TODO: starlette warns it will require `httpx2` for TestClient in a future major;
# when that lands, add httpx2 here or pin starlette below that release.
[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "pip-audit>=2.7",  # CI advisory security scan of the Python deps (run in CI, needs network)
]

# This is an application, not an installable library — uv should not try to
# build/install it as a package.
[tool.uv]
package = false
# `cpu` and `cu124` install the same torch/torchaudio from different wheel indexes,
# so they are mutually exclusive — uv resolves them as separate forks and refuses
# to enable both at once.
conflicts = [
    [{ extra = "cpu" }, { extra = "cu124" }],
]

# PyTorch's CPU and CUDA wheels live on dedicated indexes, not PyPI. `explicit`
# keeps these indexes from serving anything except the packages pinned to them in
# [tool.uv.sources], so the rest of the tree still resolves from PyPI.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# Steer torch/torchaudio to the CPU index under the `cpu` extra and the CUDA index
# under `cu124`. With neither extra active they fall back to PyPI (CPU on Windows).
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
]

# Run pytest from the sidecar/ root so `import app` resolves without an install.
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
