[package]
name = "parrot"
version = "0.0.1"
description = "Parrot — clone a voice, make it speak"
authors = ["Guilherme Passos"]
edition = "2021"

[lib]
name = "parrot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Tiny blocking HTTP client for the loopback /healthz probe (no TLS needed).
ureq = { version = "2", default-features = false }

# NOTE: serde / serde_json are intentionally NOT direct deps yet — no command
# serializes a custom struct in Phase 1 (returns are u16/bool, handled by
# tauri's own serde). Add them back when a Phase-2 command returns a real payload.
