[package]
name = "parrot"
version = "0.0.10"
description = "Parrot — clone a voice, make it speak"
authors = ["Guilherme Passos"]
edition = "2021"

[lib]
name = "parrot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: native tray (window hides to tray; tray Quit tears the app down).
tauri = { version = "2", features = ["tray-icon"] }
# Native glue plugins (called from Rust; no JS capability entries needed).
tauri-plugin-dialog = "2"          # save-as dialog for WAV export
tauri-plugin-opener = "2"          # reveal a file/folder in Explorer
tauri-plugin-updater = "2"         # auto-updater (client-rendered, dialog:false)
tauri-plugin-single-instance = "2" # focus the existing window on a second launch
# Tiny blocking HTTP client for the loopback /healthz probe (no TLS needed).
ureq = { version = "2", default-features = false }
# Command payload (de)serialization for typed returns to the UI.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
